updating last studies