@@ -1,5 +1,7 @@
 package strobonumbner;
 
+
+import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -7,23 +9,24 @@ public class Solution {
     //                       0, 1, 2,  3,  4, 5, 6,  7, 8, 9
     int mirror[] = new int[]{0, 1, 2, -1, -1, 5, 9, -1, 8, 6};
 
-    int[] strobs = new int[]{1, 6, 8, 9};
-
+    int[] strobs = new int[]{0, 1, 6, 8, 9};
 
     public static void main(String[] args) {
         //this program was not finished.
-        new Solution().findStrobogrammatic(5).forEach(System.out::println);
+        new Solution().findStrobogrammatic(3).forEach(System.out::println);
     }
 
     public List<String> findStrobogrammatic(int n) {
         LinkedList<String> result = new LinkedList<>();
 
-        findStrobogrammatic(n, n, new LinkedList<>(), result);
+        findStrobogrammatic(n, n, new ArrayList<>(n), result);
+
+        if (n == 1) result.add("0");
 
         return result;
     }
 
-    private void findStrobogrammatic(int n, int o, LinkedList<Integer> characters, LinkedList<String> result) {
+    private void findStrobogrammatic(int n, int o, List<Integer> characters, LinkedList<String> result) {
 
         int halfWay = (o / 2);
 
@@ -35,13 +38,32 @@ public class Solution {
         }
 
         for (int strob : strobs) {
+            if (isZeroDigitAtLeft(characters, strob)) continue;
+
+            if (isMiddleDigit(n, o, halfWay) && isNotMirrorableChar(strob)) {
+                continue;
+            }
+
             characters.add(strob);
             findStrobogrammatic(n - 1, o, characters, result);
-            characters.removeLast();
+            if (!characters.isEmpty())
+                characters.remove(characters.size() - 1);
         }
     }
 
-    private String toString(int o, LinkedList<Integer> characters) {
+    private boolean isZeroDigitAtLeft(List<Integer> characters, int strob) {
+        return characters.isEmpty() && strob == 0;
+    }
+
+    private boolean isNotMirrorableChar(int strob) {
+        return strob == 6 || strob == 9;
+    }
+
+    private boolean isMiddleDigit(int n, int o, int halfWay) {
+        return (o % 2 == 1) && (n - 1) == halfWay;
+    }
+
+    private String toString(int o, List<Integer> characters) {
 
         char[] charsPrimitive = new char[o];
 
